Add ZimWiki Format, closes #393 (PR #1098 by @fredericjacob @pschwede @harshad1 @gsantner)

--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -183,6 +183,9 @@
             <item
                 android:id="@+id/action_format_keyvalue"
                 android:title="@string/key_value" />
+            <item
+                android:id="@+id/action_format_zimwiki"
+                android:title="@string/zim_wiki" />
         </menu>
     </item>
     <item
