--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -65,10 +65,8 @@
                 android:key="@string/pref_key__app_start_folder"
                 android:summary="%1$s"
                 android:title="@string/app_start_folder" />
-            <android.support.v7.preference.EditTextPreference
-                android:defaultValue="@string/empty_string"
+            <Preference
                 android:icon="@drawable/ic_lock_outline_black_24dp"
-                android:inputType="textVisiblePassword"
                 android:key="@string/pref_key__default_encryption_password"
                 android:title="@string/file_encryption_password" />
         </PreferenceCategory>
