--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -411,6 +411,11 @@
                     android:title="@string/use_monospace_for_code" />
                 <CheckBoxPreference
                     android:defaultValue="false"
+                    android:icon="@drawable/ic_baseline_keyboard_return_24"
+                    android:key="@string/pref_key__markdown_newline_newparagraph"
+                    android:title="@string/newline_is_new_paragraph" />
+                <CheckBoxPreference
+                    android:defaultValue="false"
                     android:icon="@drawable/ic_code_black_24dp"
                     android:key="@string/pref_key__markdown__disable_code_block_highlight"
                     android:title="@string/disable_code_block_highlight" />
