Export: Improve Image/PDF exporting to capture whole page, add seperate Screenshot option to only capture current visible View-Area, change by @gsantner

--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -302,6 +302,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="deindent" translatable="false">De-indent</string>
     <string name="assets" translatable="false">Assets</string>
     <string name="audio" translatable="false">Audio</string>
+    <string name="screenshot" translatable="false">Screenshot</string>
     <string name="continued_overline" translatable="false">Continued overline (‾‾‾‾)</string>
     <string name="shrug" translatable="false">Shrug (¯\_(ツ)_/¯)</string>
     <string name="accordion" translatable="false">Accordion</string>
