--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -188,6 +188,10 @@
                 android:icon="@drawable/ic_image_black_24dp"
                 android:title="@string/image" />
             <item
+                android:id="@+id/action_share_screenshot"
+                android:icon="@drawable/ic_image_black_24dp"
+                android:title="@string/screenshot" />
+            <item
                 android:id="@+id/action_share_calendar_event"
                 android:icon="@drawable/ic_date_range_black_24dp"
                 android:title="@string/calendar" />
