--- a/app/src/main/res/menu/filesystem__menu.xml
+++ b/app/src/main/res/menu/filesystem__menu.xml
@@ -62,7 +62,7 @@
 
     <item
         android:id="@+id/action_copy_selected_items"
-        android:icon="@drawable/ic_base"
+        android:icon="@drawable/ic_baseline_file_copy_24"
         android:title="@string/copy"
         android:visible="false"
         app:showAsAction="never" />
