tr strings rework

--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -231,17 +231,17 @@
                 android:title="@string/file_description_format" />
         </PreferenceCategory>
 
-        <PreferenceCategory android:title="@string/backup_restore">
+        <PreferenceCategory android:title="@string/backup">
             <Preference
                 android:icon="@drawable/ic_save_black_24dp"
                 android:key="@string/pref_key__backup_settings"
                 android:title="@string/backup_settings"
-                android:summary="@string/export_settings_description" />
+                android:summary="@string/export_settings_to_json_file" />
             <Preference
                 android:icon="@drawable/ic_restore_black_24dp"
                 android:key="@string/pref_key__restore_settings"
                 android:title="@string/restore_settings"
-                android:summary="@string/import_settings_description" />
+                android:summary="@string/import_settings_from_backup_json_file_on_success_the_app_is_restarted" />
         </PreferenceCategory>
 
     </PreferenceScreen>
