move share menu option to overflow

--- a/app/src/main/res/menu/filesystem__menu.xml
+++ b/app/src/main/res/menu/filesystem__menu.xml
@@ -72,8 +72,7 @@
         android:icon="@drawable/ic_share_black_24dp"
         android:title="@string/share"
         android:visible="false"
-        app:showAsAction="always" />
-
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_go_to"
