--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -104,6 +104,15 @@
                 android:title="@string/experimental_features" />
         </PreferenceCategory>
 
+        <PreferenceCategory android:title="@string/searchCategory">
+            <CheckBoxPreference
+                android:defaultValue="false"
+                android:icon="@drawable/ic_border_outer_black_24dp"
+                android:key="@string/pref_key__is_search_in_files_enabled"
+                android:summary="@string/search_in_files_summary"
+                android:title="@string/search_in_files" />
+        </PreferenceCategory>
+
     </PreferenceScreen>
 
     <!-- Document browser screen -->
