max search depth option

--- a/app/src/main/res/values/opoc_res.xml
+++ b/app/src/main/res/values/opoc_res.xml
@@ -24,6 +24,15 @@
         <item translatable="false">3</item>
     </string-array>
 
+    <string-array name="pref_arrkeys__search_depth" translatable="false">
+        <item translatable="false">0</item>
+        <item translatable="false">1</item>
+        <item translatable="false">2</item>
+        <item translatable="false">3</item>
+        <item translatable="false">5</item>
+        <item translatable="false">10</item>
+    </string-array>
+
     <string-array name="pref_arrkeys__zero_to_four" translatable="false">
         <item translatable="false">0</item>
         <item translatable="false">1</item>
