--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -322,4 +322,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="pref_key__is_search_in_files_enabled" translatable="false">pref_key__is_search_in_files_enabled</string>
     <string name="pref_key__is_show_search_result_on_cancel_enabled" translatable="false">pref_key__is_show_search_result_on_cancel_enabled</string>
     <string name="pref_key__max_search_depth" translatable="false">pref_key__max_search_depth</string>
+    <string name="pref_key__ignored_directories_for_search" translatable="false">pref_key__ignored_directories_for_search</string>
 </resources>
