--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -73,6 +73,39 @@
                 android:title="@string/file_encryption_password" />
         </PreferenceCategory>
 
+
+        <PreferenceCategory android:title="@string/searchCategory">
+            <CheckBoxPreference
+                android:defaultValue="false"
+                android:icon="@drawable/ic_baseline_plagiarism_24"
+                android:key="@string/pref_key__is_search_in_files_enabled"
+                android:summary="@string/search_in_files_summary"
+                android:title="@string/search_in_files" />
+            <ListPreference
+                android:defaultValue="0"
+                android:dialogTitle="@string/max_search_depth"
+                android:entries="@array/pref_arrdisp__search_depth"
+                android:entryValues="@array/pref_arrkeys__search_depth"
+                android:icon="@drawable/ic_baseline_account_tree_24"
+                android:key="@string/pref_key__max_search_depth"
+                android:summary="%1$s"
+                android:title="@string/max_search_depth" />
+            <CheckBoxPreference
+                android:defaultValue="false"
+                android:icon="@drawable/ic_baseline_speaker_notes_off_24"
+                android:key="@string/pref_key__is_show_search_result_on_cancel_enabled"
+                android:summary="@string/show_search_result_on_cancel_summary"
+                android:title="@string/show_search_result_on_cancel" />
+            <android.support.v7.preference.EditTextPreference
+                android:autoLink="web"
+                android:defaultValue="@string/empty_string"
+                android:dialogMessage="@string/ignored_directories_for_search_dialog"
+                android:icon="@drawable/ic_baseline_rule_folder_24"
+                android:key="@string/pref_key__ignored_directories_for_search"
+                android:title="@string/ignored_directories_for_search" />
+        </PreferenceCategory>
+
+
         <PreferenceCategory android:title="@string/features">
             <CheckBoxPreference
                 android:defaultValue="true"
@@ -102,30 +135,6 @@
                 android:icon="@drawable/ic_bug_report_black_24dp"
                 android:key="@string/pref_key__is_enable_experimental_features"
                 android:title="@string/experimental_features" />
-        </PreferenceCategory>
-
-        <PreferenceCategory android:title="@string/searchCategory">
-            <CheckBoxPreference
-                android:defaultValue="false"
-                android:icon="@drawable/ic_baseline_plagiarism_24"
-                android:key="@string/pref_key__is_search_in_files_enabled"
-                android:summary="@string/search_in_files_summary"
-                android:title="@string/search_in_files" />
-            <CheckBoxPreference
-                android:defaultValue="false"
-                android:icon="@drawable/ic_baseline_rule_folder_24"
-                android:key="@string/pref_key__is_show_search_result_on_cancel_enabled"
-                android:summary="@string/show_search_result_on_cancel_summary"
-                android:title="@string/show_search_result_on_cancel" />
-            <ListPreference
-                android:defaultValue="0"
-                android:dialogTitle="@string/max_search_depth"
-                android:entries="@array/pref_arrdisp__search_depth"
-                android:entryValues="@array/pref_arrkeys__search_depth"
-                android:icon="@drawable/ic_baseline_account_tree_24"
-                android:key="@string/pref_key__max_search_depth"
-                android:summary="%1$s"
-                android:title="@string/max_search_depth" />
         </PreferenceCategory>
 
     </PreferenceScreen>
