--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -97,12 +97,17 @@
                 android:summary="@string/show_search_result_on_cancel_summary"
                 android:title="@string/show_search_result_on_cancel" />
             <android.support.v7.preference.EditTextPreference
-                android:autoLink="web"
                 android:defaultValue="@string/empty_string"
-                android:dialogMessage="@string/ignored_directories_for_search_dialog"
+                android:dialogMessage="@string/ignored_search_dir_names_dialog"
                 android:icon="@drawable/ic_baseline_rule_folder_24"
-                android:key="@string/pref_key__ignored_directories_for_search"
-                android:title="@string/ignored_directories_for_search" />
+                android:key="@string/pref_key__ignored_search_dir_names"
+                android:title="@string/ignored_search_dir_names" />
+            <android.support.v7.preference.EditTextPreference
+                android:defaultValue="@string/empty_string"
+                android:dialogMessage="@string/ignored_search_file_names_dialog"
+                android:icon="@drawable/ic_baseline_rule_folder_24"
+                android:key="@string/pref_key__ignored_search_file_names"
+                android:title="@string/ignored_search_file_names" />
         </PreferenceCategory>
 
 
