--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -66,7 +66,7 @@
                 android:summary="%1$s"
                 android:title="@string/app_start_folder" />
             <android.support.v7.preference.EditTextPreference
-                android:defaultValue="@string/empty_string"
+                android:defaultValue="@string/ignored_search_file_names_default_value"
                 android:icon="@drawable/ic_lock_outline_black_24dp"
                 android:inputType="textVisiblePassword"
                 android:key="@string/pref_key__default_encryption_password"
