adding txt2tags support

--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -150,6 +150,10 @@
                             android:id="@+id/action_format_zimwiki"
                             android:icon="@drawable/fountain_pen"
                             android:title="@string/zim_wiki" />
+                        <item
+                            android:id="@+id/action_format_txt2tags"
+                            android:icon="@drawable/ic_text_fields_black_24dp"
+                            android:title="@string/txt2tags" />
                     </group>
                 </menu>
             </item>
