--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -60,6 +60,7 @@
         <item translatable="false">@string/plaintext</item>
         <item translatable="false">@string/todo_txt</item>
         <item translatable="false">@string/zim_wiki</item>
+        <item translatable="false">@string/txt2tags</item>
         <item translatable="false">@string/none</item>
     </string-array>
 
@@ -81,6 +82,7 @@
         <item translatable="false">.txt</item>
         <item translatable="false">.todo.txt</item>
         <item translatable="false">.txt</item>
+        <item translatable="false">.t2t</item>
         <item translatable="false" />
     </string-array>
 
@@ -115,4 +117,5 @@
         <item translatable="false">*</item>
         <item translatable="false">+</item>
     </string-array>
+    <string name="txt2tags">txt2tags</string>
 </resources>
