--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -75,6 +75,7 @@
         <item translatable="false">@string/file_template__zim_wiki_empty</item>
         <item translatable="false">@string/file_template__md_hugo_post_front_matter</item>
         <item translatable="false">@string/file_template__md_zettelkasten</item>
+        <item translatable="false">@string/file_template__t2t_txt2tags_reference</item>
     </string-array>
 
     <string-array name="new_file_types__file_extension" translatable="false">
