--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -486,6 +486,7 @@
                     android:key="@string/pref_key__todotxt__additional_projects_contexts"
                     android:defaultValue="+presentation @work +paper @pc @home +meeting @work @market +dinner"
                     android:title="@string/additional_projects_and_contexts_title"
+                    android:description="@string/additional_projects_and_contexts_description"
                     />
             </PreferenceCategory>
 
