--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -485,8 +485,7 @@
                     android:icon="@drawable/ic_favorite_black_24dp"
                     android:key="@string/pref_key__todotxt__additional_projects_contexts"
                     android:title="@string/additional_projects_and_contexts_title"
-                    android:description="@string/additional_projects_and_contexts_description"
-                    />
+                    android:summary="@string/additional_projects_and_contexts_description" />
             </PreferenceCategory>
 
             <PreferenceCategory android:title="@string/syntax_highlighting">
