Various improvements, move @home @shop +music +video to settings default value

--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -482,10 +482,11 @@
                     android:key="@string/pref_key__todotxt__reorder_actions"
                     android:title="@string/action_order" />
                 <android.support.v7.preference.EditTextPreference
+                    android:defaultValue="+music +video @home @shop"
                     android:icon="@drawable/ic_favorite_black_24dp"
                     android:key="@string/pref_key__todotxt__additional_projects_contexts"
-                    android:title="@string/additional_projects_and_contexts_title"
-                    android:summary="@string/additional_projects_and_contexts_description" />
+                    android:summary="@string/enter_space_seperated_contexts_and_projects_these_will"
+                    android:title="@string/additional_contexts_and_projects" />
             </PreferenceCategory>
 
             <PreferenceCategory android:title="@string/syntax_highlighting">
