--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -325,6 +325,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="pref_key__is_search_query_case_sensitive" translatable="false">pref_key__is_search_query_case_sensitive</string>
     <string name="pref_key__is_search_query_use_regex" translatable="false">pref_key__is_search_query_use_regex</string>
     <string name="pref_key__is_search_in_content" translatable="false">pref_key__is_search_in_content</string>
+    <string name="pref_key__is_only_first_content_match" translatable="false">pref_key__is_only_first_content_match</string>
+    <string name="pref_key__is_show_match_preview" translatable="false">pref_key__is_show_match_preview</string>
     <string name="pref_key__todotxt__additional_projects_contexts">"pref_key__todotxt__additional_projects_contexts"</string>
     <string name="pref_key__todotxt__due_date_offset">pref_key__todotxt_due_date_offset</string>
 </resources>
